<resources>
    <string name="app_name">Demo</string>
    <string name="funds_fragment">Funds Fragment</string>
    <string name="invest_fragment">Invest Fragment</string>
    <string name="orders_fragment">Orders Fragment</string>
    <string name="watchlist_fragment">Watchlist Fragment</string>
    <string name="portfolio_fragment">Portfolio Fragment</string>
    <string name="watchlist">Watchlist</string>
    <string name="funds">Funds</string>
    <string name="invest">Invest</string>
    <string name="orders">Orders</string>
    <string name="portfolio">Portfolio</string>
    <string name="positions">Positions</string>
    <string name="holdings">Holdings</string>
    <string name="positions_fragment">Positions Fragment</string>
    <string name="profit_amp_loss"><![CDATA[Profit & Loss*]]></string>
    <string name="current_value">Current value*</string>
    <string name="total_investment">Total investment*</string>
    <string name="today_s_profit_amp_loss"><![CDATA[Today\'s Profit & Loss*]]></string>
    <string name="net_qty">NET QTY:</string>
    <string name="ltp">LTP:</string>
    <string name="p_amp_l">P&amp;L:</string>
    <string name="failed_to_load_holdings_please_try_again">Failed to load holdings. Please try again.</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
</resources>