<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/watchlistFragment"
        android:icon="@drawable/ic_bottom_home"
        android:title= "@string/watchlist" />

    <item
        android:id="@+id/ordersFragment"
        android:icon="@drawable/ic_bottom_mf"
        android:title="@string/orders"  />

    <item
        android:id="@+id/portfolioFragment"
        android:icon="@drawable/ic_bottom_portfolio"
        android:title="@string/portfolio"/>

    <item
        android:id="@+id/fundsFragment"
        android:icon="@drawable/ic_bottom_more"
        android:title="@string/funds" />

    <item
        android:id="@+id/investFragment"
        android:icon="@drawable/ic_bottom_mf"
        android:title="@string/invest" />

</menu>